use gif animation

--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,8 @@
     <script src="js/index.js"></script>
 </head>
 <body>
-    <img class="photo photo-a" src="img/sirius-black-a.png" style="display: block" >
-    <img class="photo photo-b" src="img/sirius-black-b.png">
-    <img class="poster-frame" src="img/poster-frame.png">
+    <img class="photo png" src="img/sirius-black.png" style="display: block" >
+    <img class="photo gif" src="img/sirius-black.gif">
+    <img class="photo frame" src="img/frame.png">
 </body>
 </html>
